# bookbot-tts-text-processor

./: .gitignore  MANIFEST.in  README.md  animation_data.csv  data.csv  inference.py  pyproject.toml  requirements.txt  setup.py  snapshot_inference.py
notebooks/: generate_input_ids.ipynb  word2input_ids.json
phoneme_emphasis/: __init__.py  _version.py  emphasis_model.py  normalization.py  tokenizers.py  utils.py
phoneme_emphasis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phoneme_emphasis/: __init__.py
test/: error_log.txt  generate_input_ids.py  inference.py  online_inference.py  phoneme_inference.py  preprocesser.py  snapshot_inference.py
text_processor/: __init__.py  _version.py  claude.py  claude_code_cli.py  codex_cli.py  cosmos.py  english_symbols.csv  g2p_id_symbols.py  gpt.py  gruut_sw_symbols.py  gruut_symbols.py  normalization.py  prompt.py  requirements.txt  symbols.py  test_emphasize_clients.py  test_indonesian_quote_tokenizer.py  text_processor.py  tokenizers.py  utils.py
