   [build-system]
   requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
   build-backend = "setuptools.build_meta"

   [tool.setuptools_scm]

   [project]
   name = "@phoneme_emphasis"
   description = "A brief description of your package"
   readme = "README.md"
   requires-python = "==3.10"
   license = {file = "LICENSE"}
   authors = [
       {name = "Your Name", email = "your.email@example.com"},
   ]