[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "text_processor/_version.py"

[project]
name = "text_processor"
description = "A package processing input text for Bookbot Optispeech TTS"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "David Samuel Setiawan", email = "davidsamuel.7878@gmail.com"},
]
keywords = ["linguistics", "emphasis", "g2p"]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/bookbot-hive/bookbot-tts-text-processor"
